// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PersonCard renders a skill when the search terms match a skill 1`] = `
<div
  className="person-card"
  onClick={[Function]}
>
  <RoundImage
    className="person-image"
    large={true}
    url="me.png"
  />
  <div
    className="person-details"
  >
    <Highlight
      component="span"
      highlightClassName="highlight"
      terms={
        Array [
          "walking",
        ]
      }
    >
      <div
        className="person-name hdr-subheadline"
      >
        Joe Person
      </div>
    </Highlight>
    <div
      className="person-location caption-lt-lg"
    >
      home
    </div>
  </div>
  <Pill
    className="person-skill"
    label="walking"
    small={true}
  />
</div>
`;

exports[`PersonCard renders correctly 1`] = `
<div
  className="person-card"
  onClick={[Function]}
>
  <RoundImage
    className="person-image"
    large={true}
    url="me.png"
  />
  <div
    className="person-details"
  >
    <Highlight
      component="span"
      highlightClassName="highlight"
      terms={
        Array [
          "cat",
        ]
      }
    >
      <div
        className="person-name hdr-subheadline"
      >
        Joe Person
      </div>
    </Highlight>
    <div
      className="person-location caption-lt-lg"
    >
      home
    </div>
  </div>
</div>
`;

exports[`Search matches the latest snapshot 1`] = `
<withRouter(Connect(FullPageModal))>
  <div
    className="search"
  >
    <SearchBar
      filter="person"
      searchForInput="cat"
      setSearchFilter={[Function]}
      setSearchTerm={[Function]}
      updateQueryParam={[Function]}
    />
    <div
      className="search-results"
      id="search-results"
    >
      <SearchResult
        key="1"
        searchResult={
          Object {
            "id": "1",
          }
        }
        showPerson={[Function]}
        term="cat"
      />
      <Loading
        type="bottom"
      />
      <ScrollListener
        elementId="search-results"
        onBottom={[Function]}
      />
    </div>
  </div>
</withRouter(Connect(FullPageModal))>
`;
